# osm-tagger

./: .gitignore  CODE_OF_CONDUCT.md  README.md  alembic.ini  db.dockerfile  docker-compose.dev.yaml  docker-compose.yaml  index.html  ollama.dockerfile  pyproject.toml  settings.py
.github/workflows/: build.yaml  deploy-ollama.yaml  deploy.yaml  infra.yaml
assets/: index-BA481g3W.css  index-BPgdCKbo.js  index-CJqgk6Lv.css  index-CrY3t291.css  index-DdCXXT5m.css  index-LTQEqi1V.js
demo/: README.md  index.html  index.js  package-lock.json  package.json  style.css  styles.css  uno.config.ts  vite.config.js
demo/components/ImageInput/: index.js  styles.css
demo/components/TagList/: index.js  styles.css
demo/services/: API.js  config.js  http.js
demo/styles/: styles.css
dockerfiles/: app.dockerfile  ollama.dockerfile
iac/environments/dev/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
iac/modules/ecr_repo/: main.tf  outputs.tf  variables.tf
iac/modules/ecs_cluster/: main.tf  variables.tf
migrations/tag_embeddings_db/: env.py
migrations/tag_embeddings_db/versions/: 372ffb57a810_vector_extension.py  88f7d4fd93d6_tag_embedding_table.py
notebooks/: image_embeddings.ipynb
scripts/: insert_image_embeddings.py
tagger/: main.py
tagger/api/schema/: tags.py
tagger/api/v1/: tags.py
tagger/config/: db.py  models.py  storage.py
tagger/core/: tags.py
tagger/core/models/: bedrock.py  interface.py  ollama.py  transformers.py
tagger/core/schema/: tags.py
tests/integration/core/: test_tags.py
tests/integration/core/models/: test_ollama.py
