[tool.poetry]
name = "osm-tagger"
version = "0.1.0"
description = "Generative tagging service for HOT OSM submitted images"
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = {extras = ["standard"], version = "^0.115.8"}
boto3 = "^1.37.6"
requests = "^2.32.3"
pillow = "^11.1.0"
litellm = "1.60.8"
einops = "^0.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
jupyterlab = "^4.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
