[tool.poetry]
name = "osm-tagger"
version = "0.1.0"
description = "Generative tagging service for HOT OSM submitted images"
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0"
readme = "README.md"

packages = [
    { include = "tagger" }
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = {extras = ["standard"], version = "^0.115.8"}
boto3 = "^1.37.6"
requests = "^2.32.3"
pillow = "^11.1.0"
litellm = "1.60.8"
einops = "^0.8.1"
sqlmodel = "^0.0.24"
pgvector = "^0.3.6"
psycopg2-binary = "^2.9.10"
scikit-learn = "^1.6.1"
geoalchemy2 = "^0.17.1"
pandas = "^2.2.3"
pyarrow = "^19.0.1"
fastparquet = "^2024.11.0"
transformers = "^4.51.3"
h11 = "^0.16.0"
httpcore = "^1.0.9"
torch = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
jupyterlab = "^4.3.5"
alembic = "^1.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
insert-image-embeddings = "scripts.insert_image_embeddings:main"
